# mpi-serial

./: .gitignore  AUTHORS  COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  cart.c  collective.c  comm.c  compile  config.h.in  configure  configure.ac  configure.in  copy.c  depcomp  error.c  getcount.c  group.c  handles.c  ic_merge.c  info.c  install-sh  list.c  missing  mpi.c  mpi.h  mpiP.h  op.c  pack.c  probe.c  recv.c  req.c  send.c  type.c  type.h  type_const.c
.github/workflows/: bldtest.yml
tests/: Makefile.am  Makefile.in  ctest.c  ftest.F90
